[package]
name = "persona4_cheat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.winapi]
version = "0.3.9"
features = ["tlhelp32", "errhandlingapi", "winnt", "memoryapi", "processthreadsapi"]